small change to fix alignment

--- a/app/assets/stylesheets/govt_official.css.scss
+++ b/app/assets/stylesheets/govt_official.css.scss
@@ -3,14 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .personalInfo{
-    width: 30%;
-    height: 100%;
     float: left;
 }
 
 .legislativeInfo{
-    width: 100%;
-    height: 100%;
+    float: left;
+    margin-left: -70px;
 }
 
 .header{
@@ -24,7 +22,7 @@
 // **This needs to be changed into something else....
 // alignment is not correct
 .electionYear{
-    width: 800px;
+    width: 180px;
 }
 
 .currentYear{
@@ -107,15 +105,16 @@
         li{
             margin-right: 200px;    
         }
-        display: inline-block;
-        margin-left: 230px;
+        display: inline;
         // overflow: scroll;
     }
 }
 
 
 .activityList{
+    padding-top: 30px;
     list-style-type: none;
+    margin-left: -30px;
     .listChildren{
         border-bottom: 0.5px solid #B9CED6;
     }
